--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "4.1.12",
+    "@types/node": "^25.3.0",
     "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "4.7.0",
     "tailwindcss": "4.1.12",
